--- a/article/index.html
+++ b/article/index.html
@@ -18,9 +18,10 @@
             <img src="/pictures/shead.png">
         </a>
         <div id="link-button">
-            <a class="navb" href="/about/">關於 About</a>
+            <!--<a class="navb" href="/article/">文章 Articles</a>-->
             <a class="navb" href="/project/">專案 Projects</a>
-            <a class="navb" href="/article/">文章 Articles</a>
+            <a class="navb" href="/about/">關於 About</a>
+            <!--<a class="navb" href="/en/">English</a>-->
         </div>
     </header>
     <main style="height: 80vh;">
