--- a/project/index.html
+++ b/project/index.html
@@ -20,81 +20,91 @@
             <img src="/pictures/shead.png">
         </a>
         <div id="link-button">
-            <a class="navb" href="/about/">關於 About</a>
+            <!--<a class="navb" href="/article/">文章 Articles</a>-->
             <a class="navb" href="/project/">專案 Projects</a>
-            <a class="navb" href="/article/">文章 Articles</a>
+            <a class="navb" href="/about/">關於 About</a>
+            <!--<a class="navb" href="/en/">English</a>-->
         </div>
     </header>
     <main>
-        <h1 style="font-size: 380%; text-align: left; font-family: 'Raleway', sans-serif; margin-top: 1%; margin-bottom: 1%;">我的專案 My Projects</h1>
-        <a href="https://github.com/BlueBoy247/YouTube-video-downloader" target="_blank">
-            <div class="problock">
-                <div class="proimage">
-                    <img src="/pictures/project_use/YTdownload.png" alt="thumbnail">
+        <div class="pagetitle">
+            <p>
+                <span class="zhw">我的專案 </span>
+                <span class="enw1">Projects</span>
+            </p>
+        </div>
+        <div class="content">
+            <a href="https://github.com/BlueBoy247/YouTube-video-downloader" target="_blank">
+                <div class="problock">
+                    <div class="proimage">
+                        <img src="/pictures/project_use/YTdownload.png" alt="thumbnail">
+                    </div>
+                    <div class="protitle">
+                        <p class="prozhtitle zhw">YouTube影片下載器</p>
+                        <p class="proentitle enw2">YouTube Video Downloader</p>
+                    </div>
+                    <div class="procontent">
+                        <p class="probrief">
+                            <span class="zhw">110學年度第2學期自主學習項目<br></span>
+                            <span class="enw2">
+                                Self-directed Learning project in the second semester of the 110 academic year.
+                            </span>
+                        </p>
+                    </div>
                 </div>
-                <div class="protitle">
-                    <p class="prozhtitle">YouTube影片下載器</p>
-                    <p class="proentitle">YouTube Video Downloader</p>
+            </a>
+            <a href="https://blueboy247.github.io/" target="_blank">
+                <div class="problock">
+                    <div class="proimage">
+                        <img src="/pictures/project_use/PW.png" alt="thumbnail">
+                    </div>
+                    <div class="protitle">
+                        <p class="prozhtitle zhw">我的個人網站</p>
+                        <p class="proentitle enw2">My Personal Website</p>
+                    </div>
+                    <div style="float: left; width: 46%; height: 2600px; margin-top: 20px; margin-bottom: 20px;">
+                        <p class="probrief">
+                            <span class="zhw">由我自己建置的個人網站，也就是你現在所在的網站<br></span>
+                            <span class="enw2">A website that developed by myself, which is where you are now.</span>
+                        </p>
+                    </div>
                 </div>
-                <div class="procontent">
-                    <p class="probrief">
-                        110學年度第2學期自主學習項目<br>
-                        Self-directed Learning project in the second semester of the 110 academic year.
-                    </p>
+            </a>
+            <a href="/" target="_blank">
+                <div class="problock">
+                    <div class="proimage">
+                        <img src="/" alt="thumbnail">
+                    </div>
+                    <div class="protitle">
+                        <p class="prozhtitle zhw">標題</p>
+                        <p class="proentitle enw2">Title</p>
+                    </div>
+                    <div style="float: left; width: 46%; height: 2600px; margin-top: 20px; margin-bottom: 20px;">
+                        <p class="probrief">
+                            <span class="zhw">中文敘述<br></span>
+                            <span class="enw2">English introduce</span>
+                        </p>
+                    </div>
                 </div>
-            </div>
-        </a>
-        <a href="https://blueboy247.github.io/" target="_blank">
-            <div class="problock">
-                <div class="proimage">
-                    <img src="/pictures/project_use/PW.png" alt="thumbnail">
+            </a>
+            <a href="/" target="_blank">
+                <div class="problock">
+                    <div class="proimage">
+                        <img src="/" alt="thumbnail">
+                    </div>
+                    <div class="protitle">
+                        <p class="prozhtitle zhw">標題</p>
+                        <p class="proentitle enw2">Title</p>
+                    </div>
+                    <div style="float: left; width: 46%; height: 2600px; margin-top: 20px; margin-bottom: 20px;">
+                        <p class="probrief">
+                            <span class="zhw">中文敘述<br></span>
+                            <span class="enw2">English introduce</span>
+                        </p>
+                    </div>
                 </div>
-                <div class="protitle">
-                    <p class="prozhtitle">我的個人網站</p>
-                    <p class="proentitle">My Personal Website</p>
-                </div>
-                <div style="float: left; width: 46%; height: 2600px; margin-top: 20px; margin-bottom: 20px;">
-                    <p class="probrief">
-                        由我自己建置的個人網站，也就是你現在所在的網站<br>
-                        A website that developed by myself, which is where you are now.
-                    </p>
-                </div>
-            </div>
-        </a>
-        <a href="/" target="_blank">
-            <div class="problock">
-                <div class="proimage">
-                    <img src="/" alt="thumbnail">
-                </div>
-                <div class="protitle">
-                    <p class="prozhtitle">標題</p>
-                    <p class="proentitle">Title</p>
-                </div>
-                <div style="float: left; width: 46%; height: 2600px; margin-top: 20px; margin-bottom: 20px;">
-                    <p class="probrief">
-                        中文敘述<br>
-                        English introduce
-                    </p>
-                </div>
-            </div>
-        </a>
-        <a href="/" target="_blank">
-            <div class="problock">
-                <div class="proimage">
-                    <img src="/" alt="thumbnail">
-                </div>
-                <div class="protitle">
-                    <p class="prozhtitle">標題</p>
-                    <p class="proentitle">Title</p>
-                </div>
-                <div style="float: left; width: 46%; height: 2600px; margin-top: 20px; margin-bottom: 20px;">
-                    <p class="probrief">
-                        中文敘述<br>
-                        English introduce
-                    </p>
-                </div>
-            </div>
-        </a>
+            </a>
+        </div>
     </main>
     <footer>
         <p id="siterights">
