--- a/about/index.html
+++ b/about/index.html
@@ -32,6 +32,23 @@
             color: #ffffff;
             fill:#ffffff;
         }
+        #webtime{
+            width: 90%;
+            border-collapse:collapse;
+        }
+        #webtime tr{
+            height: 60px;
+            border-bottom: solid 5px #2d726b;
+        }
+        #webtime .time{
+            width: 20%;
+            text-align: center;
+            font-size: 20px;
+        }
+        #webtime .event{
+            width: 80%;
+            font-size: 20px;
+        }
     </style>
 </head>
 <body bgcolor="#81D8D0">
@@ -40,102 +57,136 @@
             <img src="/pictures/shead.png">
         </a>
         <div id="link-button">
-            <a class="navb" href="/about/">關於 About</a>
+            <!--<a class="navb" href="/article/">文章 Articles</a>-->
             <a class="navb" href="/project/">專案 Projects</a>
-            <a class="navb" href="/article/">文章 Articles</a>
+            <a class="navb" href="/about/">關於 About</a>
+            <!--<a class="navb" href="/en/">English</a>-->
         </div>
     </header>
     <main>
-        <div id="pagetitle">
-            <h1 style="font-size: 380%; text-align: left; font-family: 'Raleway', sans-serif; margin-top: 1%; margin-bottom: 1%;">個人簡介 About Me</h1>
+        <div class="pagetitle">
+            <p>
+                <span class="zhw">關於 </span>
+                <span class="enw1">About</span></p>
         </div>
-        <p>#未完成......</p>
-        <div style="width: 10%; height: 10%; margin-right: 1%; float: left;">
-            <img src="/pictures/profile.png" style="width: 100%;">
+        <div class="pagesubtitle">
+            <p>
+                <span class="zhw">個人簡介 </span>
+                <span class="enw1">About Me</span>
+            </p>
         </div>
-        <div style="width: 89%; height: 10%; float: left;">
-            <div style="width: fit-content;">
-                <h3>藍色男孩 BlueBoy</h3>
-                <p style="margin-bottom: 0%;">
-                    鼓動の奥  仕舞い込んだ夜から、<wbr>
-                    滲んでいく  明日へ続くメロディー。<br>
-                    胸を  開き  溢れ出してく、<wbr>
-                    私だけの  ストーリー。
-                </p>
-                <div style="width: fit-content; height: fit-content; float: right; margin: 0%;">
-                    <a href="https://www.youtube.com/watch?v=a117kgda0sw" target="_blank" style="text-decoration: none; color: #000000; text-align: right; margin: 0%;">
-                        <p>── HACHI〈光の向こうへ〉</p>
-                    </a>
+        <div class="content">
+            <p>#未完成......</p>
+            <div style="width: 10%; height: 10%; margin-right: 1%; float: left;">
+                <img src="/pictures/profile.png" style="width: 100%;">
+            </div>
+            <div style="width: 89%; height: 10%; float: left;">
+                <div style="width: fit-content;">
+                    <h3>藍色男孩 BlueBoy</h3>
+                    <p style="margin-bottom: 0%;">
+                        鼓動の奥  仕舞い込んだ夜から、<wbr>
+                        滲んでいく  明日へ続くメロディー。<br>
+                        胸を  開き  溢れ出してく、<wbr>
+                        私だけの  ストーリー。
+                    </p>
+                    <div style="width: fit-content; height: fit-content; float: right; margin: 0%;">
+                        <a href="https://www.youtube.com/watch?v=a117kgda0sw" target="_blank" style="text-decoration: none; color: #000000; text-align: right; margin: 0%;">
+                            <p>── HACHI〈光の向こうへ〉</p>
+                        </a>
+                    </div>
                 </div>
             </div>
+            <div style="width: 100%; float: left;">
+                <p>簡介 Brief</p>
+                <blockquote>
+                    <p>
+                        目前就讀於台北市立建國高級中學<br>
+                        I'm now studying in Taipei Municipal Chien Kuo High School                    
+                    </p>
+                    <p>
+                        C/C++初學，正在嘗試用Python開發簡單的小工具，學習建立網頁中，對資安也有興趣<br>
+                    </p>
+                </blockquote>
+                <details open style="margin-bottom: 1%;">
+                    <summary>語言能力 Language Ability</summary>
+                    <ul style="list-style-type: none; ">
+                        <li style="margin-bottom: 7px;">
+                            中文(中華民國國語)：母語<br>
+                            Taiwanese Mandarin: Native
+                        </li>
+                        <li style="margin-bottom: 7px;">
+                            英文：中等，尚能溝通，CEFR B1<br>
+                            English: Intermediate (CEFR B1)
+                        </li>
+                        <li style="margin-bottom: 7px;">
+                            日文：JLPT N4<br>
+                            Japanese: JLPT N4
+                        </li>
+                        <li style="margin-bottom: 7px;">
+                            韓文：學習中<br>
+                            Korean: Beginner
+                        </li>
+                        <li style="margin-bottom: 7px;">
+                            德文：學習中<br>
+                            German: Beginner
+                        </li>
+                    </ul>
+                </details>
+                <details style="margin-bottom: 1%;">
+                    <summary>喜歡的遊戲 Favorite Games</summary>
+                    <ul style="list-style: none;">
+                        <li style="margin-bottom: 7px;">
+                            プロジェクトセカイ カラフルステージ！ feat. 初音ミク<br>
+                            ID: 237444116602793991
+                        </li>
+                        <li style="margin-bottom: 7px;">
+                            雀魂麻將 Mahjong Soul<br>
+                            ID: 13264912
+                        </li>
+                    </ul>
+                </details>
+            </div>
+            <div id="contactinfo">
+                <a href="https://twitter.com/summit_AMT" target="_blank" class="contact" aria-label="Twitter">
+                    <svg width="30px" height="30px" class="inline-block" style="padding:0%" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            viewBox="0 0 248 204" style="enable-background:new 0 0 248 204;" xml:space="preserve">
+                        <path d="M221.95,51.29c0.15,2.17,0.15,4.34,0.15,6.53c0,66.73-50.8,143.69-143.69,143.69v-0.04
+            C50.97,201.51,24.1,193.65,1,178.83c3.99,0.48,8,0.72,12.02,0.73c22.74,0.02,44.83-7.61,62.72-21.66
+            c-21.61-0.41-40.56-14.5-47.18-35.07c7.57,1.46,15.37,1.16,22.8-0.87C27.8,117.2,10.85,96.5,10.85,72.46c0-0.22,0-0.43,0-0.64
+            c7.02,3.91,14.88,6.08,22.92,6.32C11.58,63.31,4.74,33.79,18.14,10.71c25.64,31.55,63.47,50.73,104.08,52.76
+            c-4.07-17.54,1.49-35.92,14.61-48.25c20.34-19.12,52.33-18.14,71.45,2.19c11.31-2.23,22.15-6.38,32.07-12.26
+            c-3.77,11.69-11.66,21.62-22.2,27.93c10.01-1.18,19.79-3.86,29-7.95C240.37,35.29,231.83,44.14,221.95,51.29z"/>
+                    </svg>
+                </a>
+                <a href="https://github.com/BlueBoy247" target="_blank" class="contact">
+                    <svg viewBox="0 0 24 24" width="30px" height="30px" class="inline-block" style="padding:0%">
+                        <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/>
+                    </svg>
+                </a>
+            </div>
         </div>
-        <div style="width: 100%; float: left;">
-            <p>簡介 Brief</p>
-            <blockquote>
-                <p>
-                    目前就讀於台北市立建國高級中學<br>
-                    I'm now studying in Taipei Municipal Chien Kuo High School                    
-                </p>
-                <p>
-                    C/C++初學，正在嘗試用Python開發簡單的小工具，學習建立網頁中，對資安也有興趣<br>
-                </p>
-            </blockquote>
-            <details open style="margin-bottom: 1%;">
-                <summary>語言能力 Language Ability</summary>
-                <ul style="list-style-type: none; ">
-                    <li style="margin-bottom: 7px;">
-                        中文(中華民國國語)：母語<br>
-                        Taiwanese Mandarin: Native
-                    </li>
-                    <li style="margin-bottom: 7px;">
-                        英文：中等，尚能溝通，CEFR B1<br>
-                        English: Intermediate (CEFR B1)
-                    </li>
-                    <li style="margin-bottom: 7px;">
-                        日文：JLPT N4<br>
-                        Japanese: JLPT N4
-                    </li>
-                    <li style="margin-bottom: 7px;">
-                        韓文：學習中<br>
-                        Korean: Beginner
-                    </li>
-                    <li style="margin-bottom: 7px;">
-                        德文：學習中<br>
-                        German: Beginner
-                    </li>
-                </ul>
-            </details>
-            <details style="margin-bottom: 1%;">
-                <summary>喜歡的遊戲 Favorite Games</summary>
-                <ul style="list-style: none;">
-                    <li style="margin-bottom: 7px;">
-                        プロジェクトセカイ カラフルステージ！ feat. 初音ミク<br>
-                        ID: 237444116602793991
-                    </li>
-                    <li style="margin-bottom: 7px;">
-                        雀魂麻將 Mahjong Soul<br>
-                        ID: 13264912
-                    </li>
-                </ul>
-            </details>
+        <div class="pagesubtitle">
+            <p>
+                <span class="zhw">關於本站 </span>
+                <span class="enw1">About Website</span>
+            </p>
         </div>
-        <div id="contactinfo">
-            <a href="https://twitter.com/summit_AMT" target="_blank" class="contact" aria-label="Twitter">
-                <svg width="30px" height="30px" class="inline-block" style="padding:0%" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-        viewBox="0 0 248 204" style="enable-background:new 0 0 248 204;" xml:space="preserve">
-                    <path d="M221.95,51.29c0.15,2.17,0.15,4.34,0.15,6.53c0,66.73-50.8,143.69-143.69,143.69v-0.04
-		C50.97,201.51,24.1,193.65,1,178.83c3.99,0.48,8,0.72,12.02,0.73c22.74,0.02,44.83-7.61,62.72-21.66
-		c-21.61-0.41-40.56-14.5-47.18-35.07c7.57,1.46,15.37,1.16,22.8-0.87C27.8,117.2,10.85,96.5,10.85,72.46c0-0.22,0-0.43,0-0.64
-		c7.02,3.91,14.88,6.08,22.92,6.32C11.58,63.31,4.74,33.79,18.14,10.71c25.64,31.55,63.47,50.73,104.08,52.76
-		c-4.07-17.54,1.49-35.92,14.61-48.25c20.34-19.12,52.33-18.14,71.45,2.19c11.31-2.23,22.15-6.38,32.07-12.26
-		c-3.77,11.69-11.66,21.62-22.2,27.93c10.01-1.18,19.79-3.86,29-7.95C240.37,35.29,231.83,44.14,221.95,51.29z"/>
-                </svg>
-            </a>
-            <a href="https://github.com/BlueBoy247" target="_blank" class="contact">
-                <svg viewBox="0 0 24 24" width="30px" height="30px" class="inline-block" style="padding:0%">
-                    <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/>
-                </svg>
-            </a>
+        <div class="content" style="display: flex; align-items: center; justify-content: center;">
+            <table id="webtime">
+                <tr>
+                    <td class="time">2023-03-27</td>
+                    <td class="event">網站排版更新</td>
+                </tr>
+                <tr>
+                    <td class="time">2023-03-01</td>
+                    <td class="event">網站更名為 "BlueBoy's Space"</td>
+                </tr>
+                <tr>
+                    <td class="time">2023-02-19</td>
+                    <td class="event">網站建立，定名為 "Allen Chang's Website"</td>
+                </tr>
+            </table>
+        </div>
     </main>
     <footer>
         <p id="siterights">
