Complete the new website visual design at 2023.03.27

--- a/article/index.html
+++ b/article/index.html
@@ -8,6 +8,9 @@
     <link rel="icon" href="/pictures/favicon.ico">
     <link rel="stylesheet" href="/styles/main-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
     <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Labrada:ital@0;1&family=Noto+Sans+TC:wght@400;700;900&family=Raleway:ital,wght@1,700;1,900&family=Righteous&display=swap" rel="stylesheet">
     <style>
 
     </style>
