--- a/project/index.html
+++ b/project/index.html
@@ -8,8 +8,13 @@
     <link rel="icon" href="/pictures/favicon.ico">
     <link rel="stylesheet" href="/styles/main-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
     <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Labrada:ital@0;1&family=Noto+Sans+TC:wght@400;700;900&family=Raleway:ital,wght@1,700;1,900&family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/project-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
     <link rel="stylesheet" href="/styles/project.css" media="screen and (min-width: 992px)">
+    <link rel="preload" href="/pictures/project_use/PW.png" as="image">
+    <link rel="preload" href="/pictures/project_use/YTdownload.png" as="image">
     <style>
 
     </style>
@@ -37,7 +42,7 @@
             <a href="https://github.com/BlueBoy247/YouTube-video-downloader" target="_blank">
                 <div class="problock">
                     <div class="proimage">
-                        <img src="/pictures/project_use/YTdownload.png" alt="thumbnail">
+                        <img src="/pictures/project_use/YTdownload.png" alt="thumbnail" title="YouTube Video Downloader">
                     </div>
                     <div class="protitle">
                         <p class="prozhtitle zhw">YouTube影片下載器</p>
@@ -56,7 +61,7 @@
             <a href="https://blueboy247.github.io/" target="_blank">
                 <div class="problock">
                     <div class="proimage">
-                        <img src="/pictures/project_use/PW.png" alt="thumbnail">
+                        <img src="/pictures/project_use/PW.png" alt="thumbnail" title="My Personal Website">
                     </div>
                     <div class="protitle">
                         <p class="prozhtitle zhw">我的個人網站</p>
@@ -73,7 +78,7 @@
             <a href="/" target="_blank">
                 <div class="problock">
                     <div class="proimage">
-                        <img src="/" alt="thumbnail">
+                        <img src="/" alt="thumbnail" title="">
                     </div>
                     <div class="protitle">
                         <p class="prozhtitle zhw">標題</p>
@@ -90,7 +95,7 @@
             <a href="/" target="_blank">
                 <div class="problock">
                     <div class="proimage">
-                        <img src="/" alt="thumbnail">
+                        <img src="/" alt="thumbnail" title="">
                     </div>
                     <div class="protitle">
                         <p class="prozhtitle zhw">標題</p>
