--- a/index.html
+++ b/index.html
@@ -6,64 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlueBoy's Space</title>
     <link rel="icon" href="/pictures/favicon.ico">
-    <link rel="stylesheet" href="/styles/main-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
-    <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
+    <link rel="stylesheet" href="/styles/index-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
+    <link rel="stylesheet" href="/styles/index.css" media="screen and (min-width: 992px)">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Labrada:ital@0;1&family=Noto+Sans+TC:wght@400;700;900&family=Raleway:ital,wght@1,700;1,900&family=Righteous&display=swap" rel="stylesheet">
     <link rel="preload" href="/scripts/countdownSUBARU.js">
     <link rel="preload" href="/scripts/countdownGSAT.js">
-    <style>
-        #hometitle{
-            display: flex;
-            background-image: url(/pictures/homepage_bg.jpg);
-            background-size: cover;
-            background-position: bottom;
-            height: 70vh;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 25px;
-        }
-        .countdown{
-            width: 50vw;
-            float: left;
-            margin-top: 30px;
-            margin-bottom: 30px;
-        }
-    </style>
+    <link rel="preload" href="/pictures/homepage_bg.jpg" as="image">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <style></style>
 </head>
 <body bgcolor="#81D8D0">
     <header>
-        <a id="shead" href="/">
-            <img src="/pictures/shead.png">
-        </a>
+        <div id="hometitle">
+            <p class="enw">BlueBoy's Space</p>
+        </div>
         <div id="link-button">
             <!--<a class="navb" href="/article/">文章 Articles</a>-->
             <a class="navb" href="/project/">專案 Projects</a>
             <a class="navb" href="/about/">關於 About</a>
             <!--<a class="navb" href="/en/">English</a>-->
         </div>
+        <a href="#main" id="down" style="height: fit-content;">
+            <p class="material-symbols-outlined">expand_more</p>
+        </a>
     </header>
     <main>
-        <div id="hometitle">
-            <p class="zhw" style="font-size: 100px;">只屬於藍色少年的宇宙</p>
+        <div id="main"><br></div>
+        <div id="newpost">
+            <div class="pagesubtitle">
+                <p>
+                    <span class="zhw">最新文章 </span>
+                    <span class="enw">New post</span>
+                </p>
+            </div>
+            <div class="content" style="display: flex; align-items: center; justify-content: center;">
+                <table id="newpostblock">
+                    <tr>
+                        <td class="time enw">2023-03-27</td>
+                        <td class="posttitle zhwb">測試</td>
+                    </tr>
+                </table>
+            </div>
         </div>
-        <div id="newpost"></div>
-        <div class="pagesubtitle">
-            <p>
-                <span class="zhw">活動倒數 </span>
-                <span class="enw1">Countdown</span>
-            </p>
-        </div>
-        <div class="countdown">
-            <script async src="/scripts/countdownGSAT.js"></script>
-            <a data-type="countdown" data-id="3886391" class="tickcounter" style="display: block; width: 100%;" title="Countdown" href="//www.tickcounter.com/">
-                Countdown(113GSAT)
-            </a>
-        </div>
-        <div class="countdown">
-            <script async src="/scripts/countdownSUBARU.js"></script>
-            <a data-type="countdown" data-id="3885131" class="tickcounter" style="display: block; width: 100%; " title="Countdown" href="//www.tickcounter.com/">
-                Countdown(oozora_subaru_BD)
-            </a>
+        <div id="countdown">
+            <div class="pagesubtitle">
+                <p>
+                    <span class="zhw">活動倒數 </span>
+                    <span class="enw">Countdown</span>
+                </p>
+            </div>
+            <div class="countdown">
+                <script async src="/scripts/countdownGSAT.js"></script>
+                <a data-type="countdown" data-id="3886391" class="tickcounter" style="display: block; width: 100%;" title="Countdown" href="//www.tickcounter.com/">
+                    Countdown(113GSAT)
+                </a>
+            </div>
+            <div class="countdown">
+                <script async src="/scripts/countdownSUBARU.js"></script>
+                <a data-type="countdown" data-id="3885131" class="tickcounter" style="display: block; width: 100%; " title="Countdown" href="//www.tickcounter.com/">
+                    Countdown(oozora_subaru_BD)
+                </a>
+            </div>
         </div>
     </main>
     <footer>
