--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <p class="enw">BlueBoy's Space</p>
         </div>
         <div id="in-link-button">
-            <!--<a class="inb" href="/article/">文章 Articles</a>-->
-            <a class="inb" href="/project/">專案 Projects</a>
+            <a class="inb">記事 Blog</a>
+            <a class="inb">文章 Articles</a>
             <a class="inb" href="/about/">關於 About</a>
         </div>
         <div id="out-link-button">
@@ -44,7 +44,7 @@
                     <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/>
                 </svg>
             </a>
-            <a class="outb" href="/about/website/" title="關於本網站 About Website">
+            <a class="outb" href="/about/#website" title="關於本網站 About Website">
                 <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48">
                     <path d="M483.175 776q12.825 0 21.325-8.625T513 746V566q0-12.75-8.675-21.375-8.676-8.625-21.5-8.625-12.825 0-21.325 8.625T453 566v180q0 12.75 8.675 21.375 8.676 8.625 21.5 8.625Zm-3.193-314q14.018 0 23.518-9.2T513 430q0-14.45-9.482-24.225-9.483-9.775-23.5-9.775-14.018 0-23.518 9.775T447 430q0 13.6 9.482 22.8 9.483 9.2 23.5 9.2Zm.284 514q-82.734 0-155.5-31.5t-127.266-86q-54.5-54.5-86-127.341Q80 658.319 80 575.5q0-82.819 31.5-155.659Q143 347 197.5 293t127.341-85.5Q397.681 176 480.5 176q82.819 0 155.659 31.5Q709 239 763 293t85.5 127Q880 493 880 575.734q0 82.734-31.5 155.5T763 858.316q-54 54.316-127 86Q563 976 480.266 976Z"/>
                 </svg>
@@ -76,13 +76,29 @@
                         <td class="time enw">2023-03-27</td>
                         <td class="posttitle zhwb">測試</td>
                     </tr>
+                    <tr>
+                        <td class="time enw">2023-03-27</td>
+                        <td class="posttitle zhwb">測試</td>
+                    </tr>
+                    <tr>
+                        <td class="time enw">2023-03-27</td>
+                        <td class="posttitle zhwb">測試</td>
+                    </tr>
+                    <tr>
+                        <td class="time enw">2023-03-27</td>
+                        <td class="posttitle zhwb">測試</td>
+                    </tr>
+                    <tr>
+                        <td class="time enw">2023-03-27</td>
+                        <td class="posttitle zhwb">測試</td>
+                    </tr>
                 </table>
             </div>
         </div>
         <div id="countdown">
             <div class="pagesubtitle">
                 <p>
-                    <span class="zhw">活動倒數 </span>
+                    <span class="zhw">事件倒數 </span>
                     <span class="enw">Countdown</span>
                 </p>
             </div>
