--- a/article/index.html
+++ b/article/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test | BlueBoy's Space</title>
+    <title>Article | BlueBoy's Space</title>
     <link rel="icon" href="/pictures/favicon.ico">
     <link rel="stylesheet" href="/styles/main-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
     <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
@@ -20,15 +20,19 @@
         <a id="shead" href="/">
             <img src="/pictures/shead.png">
         </a>
-        <div id="link-button">
-            <!--<a class="navb" href="/article/">文章 Articles</a>-->
-            <a class="navb" href="/project/">專案 Projects</a>
+        <nav>
+            <a class="navb">記事 Blog</a>
+            <a class="navb">文章 Articles</a>
             <a class="navb" href="/about/">關於 About</a>
-            <!--<a class="navb" href="/en/">English</a>-->
-        </div>
+        </nav>
     </header>
     <main style="height: 80vh;">
-        <h1>未啟用</h1>
+        <div class="pagehead">
+            <p class="pagetitle">
+                <span class="zhw">文章 </span>
+                <span class="enw1">Article</span>
+            </p>
+        </div>
     </main>
     <footer>
         <p id="siterights">
