--- a/about/index.html
+++ b/about/index.html
@@ -69,7 +69,7 @@
             </div>
             <div style="width: 89%; height: 10%; float: left;">
                 <div style="width: fit-content;">
-                    <h3>藍色男孩 BlueBoy</h3>
+                    <h3>青鬱 BlueBoy</h3>
                     <p style="margin-bottom: 0%;">
                         鼓動の奥  仕舞い込んだ夜から、<wbr>
                         滲んでいく  明日へ続くメロディー。<br>
