Add Google tag (gtag.js)

--- a/about/index.html
+++ b/about/index.html
@@ -37,6 +37,15 @@
             font-size: 20px;
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VPCV2CWSBB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-VPCV2CWSBB');
+    </script>
 </head>
 <body bgcolor="#81D8D0">
     <header>
@@ -47,6 +56,7 @@
             <a class="navb">記事 Blog</a>
             <a class="navb">文章 Articles</a>
             <a class="navb" href="/about/">關於 About</a>
+            <a class="navb" href="/contact/">聯絡 contact</a>
         </nav>
     </header>
     <main>
@@ -236,12 +246,12 @@
                 <tr>
                     <td class="time enw3">2023-06-xx</td>
                     <td class="tag zhw">#記事</td>
-                    <td class="event zhw">完成頁面設計與文章發布程式之開發，並啟用該頁面</td>
+                    <td class="event zhw">完成頁面設計與文章發布程式之開發，並正式上線</td>
                 </tr>
                 <tr>
                     <td class="time enw3">2023-06-xx</td>
                     <td class="tag zhw">#文章</td>
-                    <td class="event zhw">完成頁面設計與文章發布程式之開發，並啟用該頁面</td>
+                    <td class="event zhw">完成頁面設計與文章發布程式之開發，並並正式上線</td>
                 </tr>
                 <tr>
                     <td class="time enw3">2023-05-xx</td>
@@ -264,6 +274,11 @@
                     <td class="event zhw">完成個人簡介區塊</td>
                 </tr>
                 -->
+                <tr>
+                    <td class="time enw3">2023-03-29</td>
+                    <td class="tag zhw">#聯絡</td>
+                    <td class="event zhw">聯絡表單建置完成，並正式上線</td>
+                </tr>
                 <tr>
                     <td class="time enw3">2023-03-27</td>
                     <td class="tag zhw">#首頁</td>
