--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <link rel="preload" href="/pictures/homepage_bg.jpg" as="image">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
     <style></style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VPCV2CWSBB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-VPCV2CWSBB');
+    </script>
 </head>
 <body bgcolor="#81D8D0">
     <header>
@@ -26,6 +35,7 @@
             <a class="inb">記事 Blog</a>
             <a class="inb">文章 Articles</a>
             <a class="inb" href="/about/">關於 About</a>
+            <a class="inb" href="/contact/">聯絡 Contact</a>
         </div>
         <div id="out-link-button">
             <a href="https://twitter.com/summit_AMT" target="_blank" class="outb" aria-label="Twitter" title="My Twitter">
