Add Google tag (gtag.js)

--- a/about/index.html
+++ b/about/index.html
@@ -38,6 +38,7 @@
         }
     </style>
     <!-- Google tag (gtag.js) -->
+    <!-- Google Analytics-->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VPCV2CWSBB"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -46,6 +47,8 @@
 
         gtag('config', 'G-VPCV2CWSBB');
     </script>
+    <!-- Google AdSense-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189513725790874" crossorigin="anonymous"></script>
 </head>
 <body bgcolor="#81D8D0">
     <header>
