--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
     <style></style>
     <!-- Google tag (gtag.js) -->
+    <!-- Google Analytics-->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VPCV2CWSBB"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -25,6 +26,8 @@
 
         gtag('config', 'G-VPCV2CWSBB');
     </script>
+    <!-- Google AdSense-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189513725790874" crossorigin="anonymous"></script>
 </head>
 <body bgcolor="#81D8D0">
     <header>
