--- a/about/index.html
+++ b/about/index.html
@@ -157,8 +157,8 @@
             <a href="https://github.com/BlueBoy247/YouTube-video-downloader" target="_blank">
                 <div class="problock">
                     <div class="protitle">
-                        <span class="prozhtitle zhw">YouTube影片下載器 </span>
-                        <span class="proentitle enw2">YouTube Video Downloader</span>
+                        <p class="prozhtitle zhw">YouTube影片下載器 </p>
+                        <p class="proentitle enw2">YouTube Video Downloader</p>
                     </div>
                     <div class="proimage">
                         <img src="/pictures/project_use/YTdownload.png" alt="thumbnail" title="YouTube Video Downloader">
@@ -176,8 +176,8 @@
             <a href="https://blueboy247.github.io/" target="_blank">
                 <div class="problock">
                     <div class="protitle">
-                        <span class="prozhtitle zhw">我的個人網站</span>
-                        <span class="proentitle enw2">My Personal Website</span>
+                        <p class="prozhtitle zhw">我的個人網站</p>
+                        <p class="proentitle enw2">My Personal Website</p>
                     </div>
                     <div class="proimage">
                         <img src="/pictures/project_use/PW.png" alt="thumbnail" title="My Personal Website">
@@ -319,6 +319,17 @@
                 </tr>
             </table>
         </div>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189513725790874" crossorigin="anonymous"></script>
+        <!-- 橫幅 -->
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-9189513725790874"
+            data-ad-slot="1116221023"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </main>
     <footer>
         <p id="siterights">
