--- a/contact/index.html
+++ b/contact/index.html
@@ -18,6 +18,7 @@
     </style>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- Google tag (gtag.js) -->
+    <!-- Google Analytics-->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VPCV2CWSBB"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -26,6 +27,8 @@
 
         gtag('config', 'G-VPCV2CWSBB');
     </script>
+    <!-- Google AdSense-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189513725790874" crossorigin="anonymous"></script>
 </head>
 <body bgcolor="#81D8D0">
     <header>
@@ -78,6 +81,17 @@
                 <p style="text-align: center;"><small><br>Powered by <a rel="nofollow" href="https://un-static.com/" style="color: blue;">Un-static Forms</a></small></p>
             </form>
         </div>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189513725790874" crossorigin="anonymous"></script>
+        <!-- 橫幅 -->
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-9189513725790874"
+            data-ad-slot="1116221023"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </main>
     <footer>
         <p id="siterights">
