--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </a>
             -->
         </div>
-        <a href="#main" id="down" style="height: fit-content;">
+        <a href="#main" id="down">
             <p class="material-symbols-outlined">expand_more</p>
         </a>
     </header>
@@ -85,22 +85,6 @@
             </div>
             <div class="content" style="display: flex; align-items: center; justify-content: center;">
                 <table id="newpostblock">
-                    <tr>
-                        <td class="time enw">2023-03-27</td>
-                        <td class="posttitle zhwb">測試</td>
-                    </tr>
-                    <tr>
-                        <td class="time enw">2023-03-27</td>
-                        <td class="posttitle zhwb">測試</td>
-                    </tr>
-                    <tr>
-                        <td class="time enw">2023-03-27</td>
-                        <td class="posttitle zhwb">測試</td>
-                    </tr>
-                    <tr>
-                        <td class="time enw">2023-03-27</td>
-                        <td class="posttitle zhwb">測試</td>
-                    </tr>
                     <tr>
                         <td class="time enw">2023-03-27</td>
                         <td class="posttitle zhwb">測試</td>
