--- a/article/index.html
+++ b/article/index.html
@@ -1,44 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Article | BlueBoy's Space</title>
-    <link rel="icon" href="/pictures/favicon.ico">
     <link rel="stylesheet" href="/styles/main-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
     <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Labrada:ital@0;1&family=Noto+Sans+TC:wght@400;700;900&family=Raleway:ital,wght@1,700;1,900&family=Righteous&display=swap" rel="stylesheet">
-    <style>
-
-    </style>
-    <!-- Google tag (gtag.js) -->
-    <!-- Google Analytics-->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VPCV2CWSBB"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-VPCV2CWSBB');
-    </script>
-    <!-- Google AdSense-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189513725790874" crossorigin="anonymous"></script>
+    <style></style>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script src="/scripts/include.js"></script>
 </head>
 <body bgcolor="#81D8D0">
-    <header>
-        <a id="shead" href="/">
-            <img src="/pictures/shead.png">
-        </a>
-        <nav>
-            <a class="navb">記事 Blog</a>
-            <a class="navb">文章 Articles</a>
-            <a class="navb" href="/about/">關於 About</a>
-            <a class="navb" href="/contact/">聯絡 contact</a>
-        </nav>
-    </header>
+    <header></header>
     <main style="height: 80vh;">
         <div class="pagehead">
             <p class="pagetitle">
@@ -58,13 +29,6 @@
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
     </main>
-    <footer>
-        <p id="siterights">
-            <a href="https://github.com/BlueBoy247/blueboy247.github.io/blob/main/README.md" style="text-decoration: none; color: #6cfccc;" target="_blank">
-                BlueBoy247
-            </a>
-             © 2023 All rights reserved.
-        </p>
-    </footer>
+    <footer></footer>
 </body>
 </html>
