--- a/about/index.html
+++ b/about/index.html
@@ -5,34 +5,11 @@
     <link rel="preload" href="/pictures/profile.png" as="image">
     <link rel="stylesheet" href="/styles/main-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
     <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
-    <link rel="stylesheet" href="/styles/project.css" media="screen and (min-width: 992px)">
-    <link rel="stylesheet" href="/styles/project-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
+    <link rel="stylesheet" href="/styles/about.css" media="screen and (min-width: 992px)">
+    <link rel="stylesheet" href="/styles/about-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="/scripts/include.js"></script>
-    <style>
-        #webtime{
-            width: 90%;
-            border-collapse:collapse;
-        }
-        #webtime tr{
-            height: 60px;
-            border-bottom: solid 5px #2d726b;
-        }
-        #webtime .time{
-            width: 13%;
-            text-align: center;
-            font-size: 20px;
-        }
-        #webtime .tag{
-            width: 10%;
-            text-align: center;
-            font-size: 20px;
-        }
-        #webtime .event{
-            width: 77%;
-            font-size: 20px;
-        }
-    </style>
+    <style></style>
 </head>
 <body bgcolor="#81D8D0">
     <header></header>
@@ -262,12 +239,7 @@
         </div>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189513725790874" crossorigin="anonymous"></script>
         <!-- 橫幅 -->
-        <ins class="adsbygoogle"
-            style="display:block"
-            data-ad-client="ca-pub-9189513725790874"
-            data-ad-slot="1116221023"
-            data-ad-format="auto"
-            data-full-width-responsive="true"></ins>
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9189513725790874" data-ad-slot="1116221023" data-ad-format="auto" data-full-width-responsive="true"></ins>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
