--- a/article/index.html
+++ b/article/index.html
@@ -19,12 +19,7 @@
         </div>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189513725790874" crossorigin="anonymous"></script>
         <!-- 橫幅 -->
-        <ins class="adsbygoogle"
-            style="display:block"
-            data-ad-client="ca-pub-9189513725790874"
-            data-ad-slot="1116221023"
-            data-ad-format="auto"
-            data-full-width-responsive="true"></ins>
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9189513725790874" data-ad-slot="1116221023" data-ad-format="auto" data-full-width-responsive="true"></ins>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
