--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
             $.get('/public/head.html', function(data) {
                 $('head').append(data);
             });
-            $.get('/public/footer.html', function(data) {
-                data = data.replace(/>[\n\t ]+</g, "><");
-                $('footer').append(data);
+            $(document).ready(function() {
+                $('footer').load('/public/footer.html');
             });
         });   
     </script>
@@ -109,25 +108,11 @@
         </div>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189513725790874" crossorigin="anonymous"></script>
         <!-- 橫幅 -->
-        <ins class="adsbygoogle"
-            style="display:block"
-            data-ad-client="ca-pub-9189513725790874"
-            data-ad-slot="1116221023"
-            data-ad-format="auto"
-            data-full-width-responsive="true"></ins>
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9189513725790874" data-ad-slot="1116221023" data-ad-format="auto" data-full-width-responsive="true"></ins>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
     </main>
-    <footer>
-        <p id="siterights">
-            <a href="https://github.com/BlueBoy247/blueboy247.github.io/blob/main/README.md" style="text-decoration: none; color: #6cfccc;" target="_blank">
-                BlueBoy247
-            </a>
-             © 2023 All rights reserved.
-        </p>
-
-        </div>
-    </footer>
+    <footer></footer>
 </body>
 </html>
