--- a/about/index.html
+++ b/about/index.html
@@ -206,7 +206,7 @@
                     <tr>
                         <td class="time enw3">2023-03-26</td>
                         <td class="tag zhw">#全站</td>
-                        <td class="event zhw">網站排版設計更新，並將導航列自頁面左側移至頁面上方</td>
+                        <td class="event zhw">完成網站第二版CSS設計，並將導航列自頁面左側移至頁面上方</td>
                     </tr>
                     <tr>
                         <td class="time enw3">2023-03-01</td>
@@ -216,7 +216,7 @@
                     <tr>
                         <td class="time enw3">2023-02-28</td>
                         <td class="tag zhw">#全站</td>
-                        <td class="event zhw">完成網站CSS設計</td>
+                        <td class="event zhw">完成網站第一版CSS設計</td>
                     </tr>
                     <tr>
                         <td class="time enw3">2023-02-19</td>
