--- a/contact/index.html
+++ b/contact/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="/scripts/include.js"></script>
-    <title>Contact | BlueBoy's Space</title>
-    <link rel="stylesheet" href="/styles/main-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
-    <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
-    <link rel="stylesheet" href="/styles/contact-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
-    <link rel="stylesheet" href="/styles/contact.css" media="screen and (min-width: 992px)">
+    <script>include('Contact')</script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body bgcolor="#81D8D0">
