--- a/about/index.html
+++ b/about/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="/scripts/include.js"></script>
-    <title>About | BlueBoy's Space</title>
+    <script>include('About')</script>
     <link rel="preload" href="/pictures/profile.png" as="image">
-    <link rel="stylesheet" href="/styles/main-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
-    <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
-    <link rel="stylesheet" href="/styles/about.css" media="screen and (min-width: 992px)">
-    <link rel="stylesheet" href="/styles/about-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
 </head>
 <body bgcolor="#81D8D0">
     <header></header>
@@ -141,7 +137,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="/" target="_blank">
+                <a href="/" target="_blank" style="display: none;">
                     <div class="problock">
                         <div class="protitle">
                             <p class="prozhtitle zhw">標題</p>
@@ -158,7 +154,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="/" target="_blank">
+                <a href="/" target="_blank" style="display: none;">
                     <div class="problock">
                         <div class="protitle">
                             <p class="prozhtitle zhw">標題</p>
@@ -193,6 +189,11 @@
             </div>
             <div class="content" id="devnotec" style="display: flex; align-items: center; justify-content: center;">
                 <table id="webtime">
+                    <tr>
+                        <td class="time enw3">2023-04-28</td>
+                        <td class="tag zhw">#記事</td>
+                        <td class="event zhw">完成文章發布之JavaScript撰寫，並正式上線</td>
+                    </tr>
                     <tr>
                         <td class="time enw3">2023-03-29</td>
                         <td class="tag zhw">#聯絡</td>
