--- a/article/index.html
+++ b/article/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="/scripts/include.js"></script>
-    <title>Article | BlueBoy's Space</title>
-    <link rel="stylesheet" href="/styles/main-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
-    <link rel="stylesheet" href="/styles/main.css" media="screen and (min-width: 992px)">
+    <script>include('Article')</script>
 </head>
 <body bgcolor="#81D8D0">
     <header></header>
