--- a/index.html
+++ b/index.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>BlueBoy's Space</title>
-    <link rel="stylesheet" href="/styles/index-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)">
-    <link rel="stylesheet" href="/styles/index.css" media="screen and (min-width: 992px)">
+    <link rel="preload" href="/pictures/homepage_bg.jpg" as="image">
     <link rel="preload" href="/scripts/countdownSUBARU.js">
     <link rel="preload" href="/scripts/countdownGSAT.js">
-    <link rel="preload" href="/pictures/homepage_bg.jpg" as="image">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
-    <style></style>
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-    <script>
-        $(function(){
-            $.get('/public/head.html', function(data) {
-                $('head').append(data);
-            });
-            $(document).ready(function() {
-                $('footer').load('/public/footer.html');
-            });
-        });   
-    </script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <script src="/scripts/include.js"></script>
+    <script>include('Index')</script>
 </head>
 <body bgcolor="#81D8D0">
     <header>
@@ -27,8 +14,8 @@
             <p class="enw">BlueBoy's Space</p>
         </div>
         <div id="in-link-button">
+            <a class="inb" href="/blog/">記事 Blog</a>
             <!--
-            <a class="inb">記事 Blog</a>
             <a class="inb">文章 Articles</a>
             -->
             <a class="inb" href="/about/">關於 About</a>
