--- a/public/header.html
+++ b/public/header.html
@@ -2,8 +2,8 @@
     <img src="/pictures/shead.png">
 </a>
 <nav>
+    <a class="navb" href="/blog/">記事 Blog</a>
     <!--
-    <a class="navb">記事 Blog</a>
     <a class="navb">文章 Articles</a>
     -->
     <a class="navb" href="/about/">關於 About</a>
