add function(pin the post)

--- a/article/index.html
+++ b/article/index.html
@@ -7,7 +7,7 @@
 </head>
 <body bgcolor="#81D8D0">
     <header></header>
-    <main style="height: 80vh;">
+    <main style="min-height: 85vh;">
         <div class="pagehead">
             <p class="pagetitle">
                 <span class="zhw">文章 </span>
